featured section added

--- a/index.html
+++ b/index.html
@@ -4,10 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower Shop Online </title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header></header>
-    <main></main>
+    <header>
+        <div class="header-container">
+            <div class="header-content">
+                <h2 class="header-title">Let's make <br> beautiful flowers a <br> Part of your life.</h2>
+                <p class="header-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+                <button class="shop-btn">Shop Now</button>
+            </div>
+            <img src="./asset/pngwing 10.png" alt="" ">           
+        </div>
+    </header>
+    <main>
+        <section class="featured">
+            <div class="featured-container">
+                <div class="featured-content">
+                    <div class="">
+                        <h2 class="featured-title">Our Featured Flowers</h2>
+                        <p class="featured-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                    </div>
+                </div>
+                <div class="featured-content-2">
+                    <div class="featured-content-box">
+                        <div class="featured-content-colum box1">
+                            <img src="./asset/pngwing 6.png" alt="">
+                        </div>
+                        <div class="featured-content-colum box2">
+                            <img src="./asset/pngwing 5.png" alt="">
+                        </div>
+                        <div class="featured-content-colum box3">
+                            <img src="./asset/pngwing 7.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+    </main>
     <footer></footer>
 </body>
 </html>
