some featured content add

--- a/index.html
+++ b/index.html
@@ -30,12 +30,16 @@
                     <div class="featured-content-box">
                         <div class="featured-content-colum box1">
                             <img src="./asset/pngwing 6.png" alt="">
+                            <caption>Jubu</caption>
                         </div>
                         <div class="featured-content-colum box2">
                             <img src="./asset/pngwing 5.png" alt="">
+                            <caption>Jubu</caption>
+
                         </div>
                         <div class="featured-content-colum box3">
                             <img src="./asset/pngwing 7.png" alt="">
+                            <caption>Jubu</caption>
                         </div>
                     </div>
                 </div>
