--- a/index.html
+++ b/index.html
@@ -76,7 +76,26 @@
                 </div>
             </div>
         </section>
-
+        <!-- hot  heal section -->
+        <section class="hot-deal">
+            <div class="deal-container">
+                <div class="deal-content">
+                    <h2 class="deal-title">Hot Deal ! Sale Up To 25% Off</h2>
+                    <p class="deal-des">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
+                    <button class="deal-btn shop-btn ">Sign Up</button>
+                </div>
+                <img src="./asset/pngwing 8.png" alt="" class="heal-img">
+            </div>
+        </section>
+        <!-- Instagram section -->
+        <section class="instagram">
+            <div class="instagram-container">
+                <div class="instagram-content">
+                    <h2 class="instagram-title">Instagram</h2>
+                     <p class="instagram-des"> It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                </div>
+            </div>
+          </section>
 
     </main>
     <footer></footer>
