--- a/index.html
+++ b/index.html
@@ -92,7 +92,13 @@
             <div class="instagram-container">
                 <div class="instagram-content">
                     <h2 class="instagram-title">Instagram</h2>
-                     <p class="instagram-des"> It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                     <p class="instagram-des"> It is a long established fact that a reader will be distracted <br> by the readable content of a page when looking at its layout.</p>
+                </div>
+                <div class="instagram-img">
+                    <img src="./asset/Flower 01.png" alt="" class="instagram-img-item">
+                    <img src="./asset/Rectangle 4.png" alt="" class="instagram-img-item">
+                    <img src="./asset/Rectangle 5.png" alt="" class="instagram-img-item">
+                    <img src="./asset/Rectangle 6.png" alt="" class="instagram-img-item">
                 </div>
             </div>
           </section>
