--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <section class="hot-deal">
             <div class="deal-container">
                 <div class="deal-content">
-                    <h2 class="deal-title">Hot Deal ! Sale Up To 25% Off</h2>
+                    <h2 class="deal-title">Hot Deal ! Sale Up To <span>25% Off</span></h2>
                     <p class="deal-des">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
                     <button class="deal-btn shop-btn ">Sign Up</button>
                 </div>
@@ -103,7 +103,30 @@
             </div>
           </section>
 
+          <!-- Newslater form -->
+          <section class="newslater-contaiter">
+            <div class="newslater-heading">
+                <h2>Get The Latest Deals</h2>
+                <p class="newslater-des">$30 coupon for first shopping</p>
+                <div class="newslater-form">
+                    <form action="">
+                        <input type="email" placeholder="Your Email" class="sub-mail">
+                        <input type="submit" value="Subscribe" class="shop-btn">
+                    </form>
+                </div>
+            </div>
+            
+          </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer-content">
+            <div class="footer-title"> 
+                <h2><span>Flower</span>Shop</h2>
+            </div>
+            <p class="footer-des">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            <p class="copyright">@2020-2023, FlowerShop.com. All rights reserved. </p>
+        </div>
+
+    </footer>
 </body>
 </html>
