blog section added that means bunus section add

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                 </div>
             </div>
         </section>
+
         <!-- hot  heal section -->
         <section class="hot-deal">
             <div class="deal-container">
@@ -87,6 +88,46 @@
                 <img src="./asset/pngwing 8.png" alt="" class="heal-img">
             </div>
         </section>
+
+        <!-- Blog section and bonus section -->
+        <section class="blog-section">
+            <div class="blog-heading">
+                <span>My Recent Blog</span>
+                <h3>My Blogs</h3>
+            </div>
+
+            <!-- blog container -->
+            <div class="blog-container">
+                <div class="blog-box">
+                    <div class="blog-img">
+                        <img src="./blog img/blog img 1.jpg" alt="">
+                        <div class="blog-title">
+                            <h2>Blooming Blissful Blossoms</h2>
+                            <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ullam placeat eius quaerat dolorum libero harum perferendis consectetur numquam optio!</p>
+                            <button class="blog-btn">Read more...</button>
+                        </div>
+                    </div>
+                    <div class="blog-img">
+                        <img src="./blog img/blog img 2.jpg" alt="">
+                        <div class="blog-title">
+                            <h2>Blooming Blissful Blossoms</h2>
+                            <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ullam placeat eius quaerat dolorum libero harum perferendis consectetur numquam optio!</p>
+                            <button class="blog-btn">Read more...</button>
+                        </div>
+                    </div>
+                    <div class="blog-img">
+                        <img src="./blog img/blog img 3.jpg" alt="">
+                        <div class="blog-title">
+                            <h2>Vibrant Garden Whispers</h2>
+                            <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ullam placeat eius quaerat dolorum libero harum perferendis consectetur numquam optio!</p>
+                            <button class="blog-btn">Read more...</button>
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
+        </section>
+
         <!-- Instagram section -->
         <section class="instagram">
             <div class="instagram-container">
